--- a/FakeBook/server/package.json
+++ b/FakeBook/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^2.6.1",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "mssql": "^4.1.0",
     "socket.io": "^2.1.1"
